tech-framework-language/k8s/resource-yaml/service-without-selector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  # by convention, use the name of the Service as a prefix for the name of the EndpointSlice
  name: my-service-1
  labels:
    # You link an EndpointSlice to a Service by setting the kubernetes.io/service-name label on that EndpointSlice.
    # Set its value to match the name of the Service
    kubernetes.io/service-name: my-service
    # Avoid using the reserved value "controller", which identifies EndpointSlices managed by Kubernetes' own control plane.
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    # target port of endpoints
    port: 9376
endpoints:
  # the IP addresses in this list can appear in any order
  # The endpoint IP addresses cannot be the cluster IPs of other Kubernetes Services, because kube-proxy doesn't support virtual IPs as a destination.
  - addresses:
      - "10.4.5.6"
      - "10.1.2.3"
